--- a/app/src/main/resources/static/assets/css/doctorDashboard.css
+++ b/app/src/main/resources/static/assets/css/doctorDashboard.css
@@ -1,3 +1,166 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body{
+  height: 100%;
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex-grow: 1;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+h2 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  color: #003e3e;
+  text-align: center;
+}
+
+#searchBar {
+  width: 300px;
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  outline: none;
+  margin-bottom: 20px;
+}
+
+#searchBar:focus {
+  border-color: #015c5d;
+  box-shadow: 0 0 5px rgba(1, 92, 93, 0.5);
+}
+
+.filter-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.filter-wrapper button,
+.filter-wrapper input[type="date"] {
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.filter-wrapper button {
+  background-color: #015c5d;
+  color: #fff;
+  margin-right: 10px;
+  border: none;
+}
+
+.filter-wrapper button:hover {
+  background-color: #017d7e;
+}
+
+.filter-wrapper input[type="date"] {
+  margin-left: 10px;
+  height: 30px;
+}
+
+.table-header {
+  font-size: 24px;
+  color: #015c5d;
+  margin-bottom: 30px;
+  margin-right: 0;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  margin-top: 20px;
+}
+
+thead {
+  background-color: #33333310;
+  color: #fff;
+}
+
+th, td {
+  padding: 12px 16px;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+
+
+tbody tr:nth-child(even) {
+  background-color: rgba(249, 249, 249, 0.35);
+}
+
+tbody tr:nth-child(odd) {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+tbody tr:hover {
+  background-color: rgba(1, 92, 93, 0.22);
+}
+
+.today-btn {
+  margin-right: 10px;
+  padding: 10px;
+  background-color: #015c5d;
+  color: white;
+  border-radius: 8px;
+}
+
+.prescription-btn {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  transition: transform 0.2s ease, filter 0.2s ease;
+}
+
+.prescription-btn:hover {
+  transform: scale(1.1);
+  filter: brightness(1.2);
+}
+
+.prescription-btn:active {
+  transform: scale(0.95);
+}
+
+.noPatientRecord {
+  font-size: 16px;
+  font-style: italic;
+  color: gray;
+  margin-top: 20px;
+}
+
+.date-picker {
+  margin-left: 10px;
+  margin-top: 13px;
+  padding: 10px;
+  height: 30px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+  .today-btn, .date-picker {
+    margin: 5px 0;
+  }
 /* This is the style sheet for the doctorDashboard.html */
 /* 
 **Table Header (`.table-header`)**
