--- a/app/src/main/resources/templates/doctor/doctorDashboard.html
+++ b/app/src/main/resources/templates/doctor/doctorDashboard.html
@@ -1,3 +1,57 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/png" th:href="@{/assets/images/logo/logo.png}"/>
+    <title>Doctor Dashboard</title>
+    <link rel="stylesheet" th:href="@{/assets/css/adminDashboard.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/doctorDashboard.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/style.css}">
+    <script th:src="@{/js/render.js}" defer></script>
+    <script th:src="@{/js/util.js}" defer></script>
+    <script th:src="@{/js/components/header.js}" defer></script>
+    <script th:src="@{/js/components/footer.js}" defer></script>
+    <script th:src="@{/js/components/patientRows.js}" defer></script>
+</head>
+<body>
+    <div class="container">
+        <div class="wrapper">
+            <div id="header"></div>
+            <main class="main-content">
+                <h2>Doctor Dashboard</h2>
+                <input type="text" id="searchBar" placeholder="Search patient by name" />
+                <div class="filter-wrapper">
+                    <button id="today-btn">Today's Appointments</button>
+                    <input type="date" id="dateFilter"/>
+                </div>
+
+                <table id="patientTable">
+                    <thead>
+                        <tr>
+                            <th>Patient ID</th>
+                            <th>Name</th>
+                            <th>Phone</th>
+                            <th>Email</th>
+                            <th>Prescription</th>
+                        </tr>
+                    </thead>
+                    <tbody id="patientTableBody">
+                    </tbody>
+                </table>
+            </main>
+            <div id="footer"></div>
+        </div>
+    </div>
+        <div id="modal" class="modal">
+        <span id="closeModal" class="close">&times;</span>
+        <div id="modal-body"></div>
+    </div>
+
+    <!-- Services & Main Logic -->
+    <script type="module" src="@{/js/services/patientServices.js}" defer></script>
+    <script type="module" src="@{/js/services/doctorDashboard.js}" defer></script>
+</body>
+</html>
 <!-- doctorDashboard.html -->
 
 <!-- 
